tdf#111818: add SearchItem.AlgorithmType2 option

and use InitPropertySequence

Change-Id: I1e7b6498828fc19c46c51501f1908dc830d8d826
Reviewed-on: https://gerrit.libreoffice.org/41654
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>